--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Prashikshan - Academia-Industry Internship Platform that connects learning with real work" />
+    <meta name="description" content="Prashikshan - Academia-Industry Internship Platform that connects learning with R Woke" />
     <title>Prashikshan - Academia-Industry Internship Platform</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
